ReadPanel alignment issues (#1756)
This style makes the table take up 100% of the width of the component
and aligns the price to the right. This maximises the space between
the label and the price.

Fixes: #1752

--- a/static/css/components/read-panel.less
+++ b/static/css/components/read-panel.less
@@ -23,6 +23,15 @@
   li {
     margin: 5px 10px 0;
   }
+  table {
+    width: 100%;
+    td {
+      text-align: left;
+      &.price {
+        text-align: right;
+      }
+    }
+  }
 }
 // For the button at the top
 @import (less) "components/buttonCta.less";
